<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/loginimage"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <ImageView
            android:id="@+id/applogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:src="@drawable/transperentlogo" />

    </RelativeLayout>

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="50dp"
        android:hint="@string/fname"
        android:textSize="23dp"
        android:paddingLeft="10dp"
        android:paddingVertical="4dp"
        android:background="@drawable/custom_border"/>

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/lname"
        android:textSize="23dp"
        android:paddingLeft="10dp"
        android:paddingVertical="4dp"
        android:background="@drawable/custom_border"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:textSize="23dp"
        android:paddingLeft="10dp"
        android:paddingVertical="4dp"
        android:background="@drawable/custom_border"
        />

    <EditText
        android:id="@+id/mobileno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/phone"
        android:textSize="23dp"
        android:paddingLeft="10dp"
        android:paddingVertical="4dp"
        android:background="@drawable/custom_border"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textSize="23dp"
        android:paddingLeft="10dp"
        android:paddingVertical="4dp"
        android:background="@drawable/custom_border"/>

    <EditText
        android:id="@+id/passcheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/repass"
        android:textSize="23dp"
        android:paddingLeft="10dp"
        android:paddingVertical="4dp"
        android:background="@drawable/custom_border"/>

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="20dp"
        android:text="Sign-in"
        android:textColor="@color/colorwhite"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/signintologintext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="7dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/signtologintxt"
        android:textColor="@color/colorwhite"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textAlignment="center"/>
</LinearLayout>